# ocr-automation

./: .gitignore  .gitmodules  README.md  ocr_automation_手修正ui_実装手順書.md  pyproject.toml
.github/workflows/: build.yml  test.yml
app/: __init__.py  __main__.py  exceptions.py  main.py
app/controllers/: __init__.py  app_controller.py  ocr_worker.py  print_worker.py
app/core/: __init__.py  exporter.py  industry_presets.py  license_manager.py  model_manager.py  ocr_engine.py  ocr_response_flatten.py  printer.py  prompt_builder.py  review_rules.py  template.py  updater.py  watcher.py
app/gui/: __init__.py  folder_settings.py  license_settings.py  log_viewer.py  main_window.py  model_download_dialog.py  printer_settings.py  qt_log_handler.py  review_editor.py  review_queue.py  template_editor.py  template_set_editor.py  update_dialog.py
app/gui/widgets/: __init__.py  field_placement_editor.py
app/infrastructure/: __init__.py  http_client.py  keyring_store.py  logger.py  paths.py  review_history_store.py  review_store.py  settings_store.py
app/models/: __init__.py  job_model.py  license_model.py  ocr_result_model.py  review_history_model.py  settings_model.py  template_model.py
app/utils/: helpers.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  exceptions.py  firestore_client.py  gemini_client.py  logging_config.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: license.py  ocr.py  usage.py
backend/app/repositories/: license_repository.py  usage_log_repository.py
backend/app/routers/: health.py  license.py  ocr.py
backend/app/services/: gemini_service.py  license_service.py  usage_service.py
backend/deploy/: cloudbuild.yaml  service.yaml
backend/docker/: Dockerfile
backend/scripts/: admin.py  local_jdk.sh  seed_test_data.py
backend/tests/: conftest.py
backend/tests/unit/: test_gemini_client.py  test_gemini_service.py  test_health.py  test_response_schema.py
cursorrules/: cursorrules.md
doc/: CLAUDE.md  architecture.md  backend-CLAUDE.md  backend-architecture.md  backend-requirements.md  requirements.md
docs/: CLAUDE.md  architecture.md  index.html  requirements.md
template_sets/: default_set.yaml
templates/: default_invoice.yaml  default_receipt.yaml
tests/: conftest.py
tests/integration/: test_e2e_pipeline.py  test_review_flow.py
tests/unit/: test_core.py  test_exporter.py  test_gui_smoke.py  test_industry_presets.py  test_infrastructure.py  test_logger.py  test_model_manager.py  test_models.py  test_ocr_engine.py  test_ocr_response_flatten.py  test_ocr_worker.py  test_ocr_worker_phase3.py  test_paths.py  test_printer.py  test_prompt_builder.py  test_review_history_store.py  test_review_rules.py  test_review_store.py  test_settings_model.py  test_settings_store.py  test_template.py  test_updater.py  test_watcher.py
