[project]
name = "ocr-automation"
version = "0.1.0"
description = "OCR Automation Desktop App — 手書き画像 → クラウドOCR → 構造化抽出 → 複数テンプレート同時適用 → 出力 → 自動印刷"
requires-python = ">=3.12,<3.14"
dependencies = [
    "PySide6>=6.7",
    "watchdog>=4.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "pypdf>=4.2",
    "keyring>=25.2",
    "ruff>=0.4",
]

[project.optional-dependencies]
win = ["pywin32>=306"]
dev = [
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
