[project]
name = "ocr-automation"
version = "0.1.0"
description = "手書き画像 → OCR → テンプレート適用 → 出力 → 自動印刷 デスクトップアプリ"
requires-python = ">=3.11,<3.12"
license = "MIT"

dependencies = [
    "pydantic>=2.0,<3.0",
    "watchdog>=4.0,<5.0",
    "PyYAML>=6.0,<7.0",
    # NDL OCR Lite dependencies
    "onnxruntime>=1.17,<1.21",
    "pillow>=10.0,<13.0",
    "numpy>=1.26,<3.0",
    "opencv-python-headless>=4.9,<4.11",
    "lxml>=5.0,<6.0",
    "networkx>=3.0,<4.0",
    "ordered-set>=4.1,<5.0",
    "pyparsing>=3.1,<4.0",
    "tqdm>=4.66,<5.0",
    "dill>=0.3,<1.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6,<7.0",
]
output = [
    "python-docx>=1.0,<2.0",
    "openpyxl>=3.1,<4.0",
    "reportlab>=4.0,<5.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-qt>=4.3,<5.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
ocr-automation = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
